changing the new color

--- a/super.html
+++ b/super.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1 id="h1">Heading One</h1>
-  <h1 id="h2">Heading Two</h1>
+  <h1 id="h2">Heading Two fast</h1>
   <h1 id="h3">Heading Three change</h1>
 </body>
 </html>
